added implementation for change user permissions and changed user add to org into email
